<resources>
    <string name="app_name">PainDiary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="default_message">"hello!"</string>
    <string name="button_send">"say hello"</string>
    <string name="wait">"wait!"</string>
    <string name="interact_message">You just clicked on the Button!</string>

    <string name="userIdError">You userid is error!</string>
    <string name="passError">You  pass is error!</string>
    <string name="loginSuccess">Login success </string>
    <string name="loginError">Login error </string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pain_data_entry">Pain Data</string>
    <string name="menu_daily_record">Daily Record</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_map">Map</string>

    <string name="mapbox_access_token">pk.eyJ1IjoibWFwYm94MTIzNWZkZCIsImEiOiJja29ja2I1dGIwOGt6Mm9xYWhoZGY4NGp5In0.54v_3Kx9flE_tHVk85ECCQ</string>

</resources>