<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pain_data_entry"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pain_data_entry" />
        <item
            android:id="@+id/nav_daily_record"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_daily_record" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_map" />
    </group>
</menu>